# anki_practice

ocaml/balanced_tree_from_inorder_list/: dune-project
ocaml/balanced_tree_from_inorder_list/_build/: .db  .digest-db  log
ocaml/balanced_tree_from_inorder_list/_build/default/: balanced_tree_from_inorder_list.dune-package  balanced_tree_from_inorder_list.install
ocaml/balanced_tree_from_inorder_list/_build/default/lib/: balanced_tree_from_inorder_list.cma  balanced_tree_from_inorder_list.cmxa  balanced_tree_from_inorder_list.cmxs  balanced_tree_from_inorder_list.ml
ocaml/balanced_tree_from_inorder_list/_build/default/test/: oUnit-test_suite.cache
ocaml/balanced_tree_from_inorder_list/lib/: balanced_tree_from_inorder_list.ml  dune
ocaml/balanced_tree_from_inorder_list/test/: dune  tests.ml
ocaml/palindromes/: dune-project
ocaml/palindromes/_build/: .db  .digest-db  log
ocaml/palindromes/_build/default/: palindromes.dune-package  palindromes.install
ocaml/palindromes/_build/default/.utop/: utop.ml-gen
ocaml/palindromes/_build/default/lib/: palindromes.cma  palindromes.cmxa  palindromes.cmxs  palindromes.ml
ocaml/palindromes/lib/: dune
ocaml/palindromes/soln/: soln.ml
ocaml/palindromes/test/: dune
ocaml/tree_traversal/: dune-project
ocaml/tree_traversal/_build/: .db  .digest-db  log
ocaml/tree_traversal/_build/default/: tree_traversal.dune-package  tree_traversal.install
ocaml/tree_traversal/_build/default/lib/: interf.ml  tree_traversal.cma  tree_traversal.cmxa  tree_traversal.cmxs  tree_traversal.ml  tree_traversal__.ml-gen
ocaml/tree_traversal/_build/default/test/: oUnit-All tests.cache  reference.ml
ocaml/tree_traversal/lib/: soln.ml  tree_traversal.ml
ocaml/tree_traversal/test/: dune  test.ml
(+840 files in other folders)
